# ollive

./: .env.example  .gitignore  README.md  app.py  chat_ui.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
assistants/: __init__.py  frontier.py  oss.py
core/: __init__.py  guardrails.py  memory.py  observability.py  pricing.py
eval/: build_pdf.py  judge.py  plot.py  run_eval.py
eval/prompts/: bias.json  factual.json  jailbreak.json
modal_app/: README.md  vllm_server.py
pages/: 1_Open_Source.py  2_Frontier.py
