[project]
name = "ollive"
version = "0.1.0"
description = "Dual personal AI assistant comparing Llama-3.2-1B-Instruct vs GPT-5-nano with eval harness"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "streamlit>=1.39.0",
  "openai>=1.54.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.9.0",
  "httpx>=0.27.2",
  "matplotlib>=3.9.2",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
]

[project.optional-dependencies]
local = [
  "transformers>=4.46.0",
  "torch>=2.4.0",
  "accelerate>=1.0.0",
]
modal = [
  "modal>=0.66.0",
]
all = [
  "transformers>=4.46.0",
  "torch>=2.4.0",
  "accelerate>=1.0.0",
  "modal>=0.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["assistants", "core", "eval", "modal_app"]
include = ["chat_ui.py", "app.py", "pages/*.py"]
